--- a/index.html
+++ b/index.html
@@ -118,20 +118,20 @@
                         </p>
                         <p class="info">校园工作<br/>2016.05-2017.05：电子商务协会办公室主任<br/>2016.12-2017.12：校学社联常任理事<br/>2017.03-2017.05：组织公益团队，策划发起超400人公益活动<br/>2017.09-2018.07：校团委助理<br/><br/>获奖情况<br/>挑战杯校赛银奖<br/>第七届电子商务三创赛省赛二等奖<br/>第七届全国大学生市场调查与分析大赛国赛三等奖<br/>大学生流通业经营模拟大赛国赛一等奖<br/>大学生营销模拟决策大赛国赛一等奖<br/>单项奖学金</p>  
                         <!-- form -->
-                        <form class="form_edit"> 
+<!--                         <form class="form_edit"> 
                             <div class="form-group">
-<!--                                 <input type="name" class="form-control" id="exampleInputName" placeholder="Name"> -->
+                                <input type="name" class="form-control" id="exampleInputName" placeholder="Name">
                             </div>
 
                             <div class="form-group">
-<!--                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email"> -->
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                             </div>
 
                             <div class="form-group">
                             <textarea class="form-control" rows="5" placeholder="Message"></textarea>
                             </div>
-<!--                             <button type="submit" class="btn btn-rabbit submit">Send Message</button> -->
-                        </form>
+                            <button type="submit" class="btn btn-rabbit submit">Send Message</button>
+                        </form> -->
                     </div>
                 </div>
             </div>
